app/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind variants;

* {
  text-rendering: optimizeLegibility;
}

.app * {
  -moz-transition: none !important; /* firefox is just built different ok */
}

:root {
  --header-height: theme("height.14");
  --h-screen-without-header: calc(100vh - var(--header-height));
  --max-content-width: theme("maxWidth.6xl");
  --default-gap: 1rem;
  --default-radius: 0.375rem;
  --default-border-color: theme("colors.neutral.200");
}

@layer base {
  .app {
    min-height: 100vh;
    background-color: white;
    color: black;
  }

  .header {
    z-index: 10;
    position: sticky;
    top: 0;

    height: var(--header-height);
    width: 100%;
    background-color: white;

    border-bottom-width: 1px;
  }

  .header-scrolled {
    border: none;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 15px 0px;
  }

  .main {
    min-height: var(--h-screen-without-header);
    max-width: var(--max-content-width);
    margin-left: auto;
    margin-right: auto;
    padding-top: var(--default-gap);
    padding-bottom: var(--default-gap);
    padding-left: var(--default-gap);
    padding-right: var(--default-gap);
  }

  .card {
    padding-left: var(--default-gap);
    padding-right: var(--default-gap);
    padding-top: var(--default-gap);
    padding-bottom: var(--default-gap);

    border-width: 1px;
    border-radius: var(--default-radius);
    border-color: var(--default-border-color);

    @apply transition-all duration-200;
  }

  .card-shadow {
    @apply shadow-[0_8px_30px_rgba(0,0,0,.12)];
  }

  .input-field {
    @apply form-input border-neutral-200;
    border-width: 1px;
    border-radius: var(--default-radius);
    font-size: theme("fontSize.sm");
    height: theme("height.10");
    padding-left: var(--default-gap);
    padding-right: var(--default-gap);
  }

  .input-field::placeholder {
    color: theme("colors.neutral.400");
  }

  .select-field {
    @apply form-select border-neutral-200;
    text-transform: uppercase;
    font-weight: 600;
    background-color: whtie;
    border-width: 1px;
    border-radius: var(--default-radius);
    font-size: theme("fontSize.sm");
    height: theme("height.10");
    padding-left: var(--default-gap);
    padding-right: var(--default-gap);
  }

  .textarea-field {
    @apply form-textarea border-neutral-200;
    background-color: whtie;
    border-width: 1px;
    border-radius: var(--default-radius);
    font-size: theme("fontSize.sm");
  }

  .select-field:focus,
  .input-field:focus,
  .textarea-field:focus {
    @apply border-black ring-black;
  }

  .button {
    border-radius: var(--default-radius);
    border-width: 1px;
    border-color: black;
    background-color: black;
    color: white;
    padding-left: theme("padding.3");
    padding-right: theme("padding.3");
    padding-top: theme("padding[1.5]");
    padding-bottom: theme("padding[1.5]");

    @apply text-sm font-medium transition-all duration-200;
  }

  .button:hover {
    color: black;
    background-color: white;
  }

  .button-danger {
    @apply button;

    border-color: theme("colors.red.500");
    background-color: theme("colors.red.500");
  }

  .button-danger:hover {
    color: theme("colors.red.500");
  }
}

